--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB_USER=john
 DB_PASSWORD=GoUQFfFE8iLBifrM
 DB_Name=new_todos
 JWT_KEY=secret_key
+MONGO_CLIENT=mongodb+srv://john:GoUQFfFE8iLBifrM@cluster0.1il8s.mongodb.net/new_todos?retryWrites=true&w=majority
