--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^2.4.1",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.9"
   }
 }
