--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "eslint-plugin-prettier": "^3.4.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
+    "prettier-tslint": "^0.4.2",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.9"
   }
 }
